--- a/dream.ini
+++ b/dream.ini
@@ -4,32 +4,32 @@ Size=1366,745
 Collapsed=0
 
 [Window][Viewport]
-Pos=248,26
-Size=875,527
+Pos=259,27
+Size=832,503
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][SceneGraph]
-Pos=4,26
-Size=242,715
+Pos=4,27
+Size=253,714
 Collapsed=0
 DockId=0x00000002,0
 
 [Window][Inspector]
-Pos=1125,26
-Size=237,715
+Pos=1093,27
+Size=269,714
 Collapsed=0
 DockId=0x00000007,0
 
 [Window][Output]
-Pos=248,555
-Size=875,186
+Pos=259,532
+Size=832,209
 Collapsed=0
 DockId=0x00000006,0
 
 [Window][Settings]
-Pos=171,93
-Size=1024,558
+Pos=151,90
+Size=907,540
 Collapsed=0
 
 [Window][Debug##Default]
@@ -37,12 +37,42 @@ Pos=75,68
 Size=560,579
 Collapsed=0
 
+[Window][V2]
+Pos=173,127
+Size=432,285
+Collapsed=0
+
+[Window][Dear ImGui Demo]
+Pos=10,285
+Size=550,416
+Collapsed=0
+
+[Window][V]
+Pos=-40,162
+Size=639,420
+Collapsed=0
+
+[Window][Title bar Hovered/Active tests]
+Pos=60,60
+Size=312,121
+Collapsed=0
+
+[Window][Nodes]
+Pos=60,60
+Size=247,299
+Collapsed=0
+
+[Window][Add Component]
+Pos=171,93
+Size=1024,558
+Collapsed=0
+
 [Docking][Data]
-DockSpace       ID=0x484C392C Window=0x9DF47A72 Pos=4,26 Size=1358,715 Split=X Selected=0xF02CD328
-  DockNode      ID=0x00000002 Parent=0x484C392C SizeRef=242,715 Selected=0xC15A3217
-  DockNode      ID=0x00000004 Parent=0x484C392C SizeRef=548,715 Split=X
-    DockNode    ID=0x00000003 Parent=0x00000004 SizeRef=309,715 Split=Y
-      DockNode  ID=0x00000005 Parent=0x00000003 SizeRef=792,527 CentralNode=1 Selected=0x995B0CF8
-      DockNode  ID=0x00000006 Parent=0x00000003 SizeRef=792,186 Selected=0xCB7211A8
-    DockNode    ID=0x00000007 Parent=0x00000004 SizeRef=237,715 Selected=0xF02CD328
+DockSpace       ID=0x484C392C Window=0x9DF47A72 Pos=4,27 Size=1358,714 Split=X Selected=0xF02CD328
+  DockNode      ID=0x00000002 Parent=0x484C392C SizeRef=253,715 Selected=0xC15A3217
+  DockNode      ID=0x00000004 Parent=0x484C392C SizeRef=1103,715 Split=X
+    DockNode    ID=0x00000003 Parent=0x00000004 SizeRef=832,715 Split=Y
+      DockNode  ID=0x00000005 Parent=0x00000003 SizeRef=792,504 CentralNode=1 Selected=0x995B0CF8
+      DockNode  ID=0x00000006 Parent=0x00000003 SizeRef=792,209 Selected=0xCB7211A8
+    DockNode    ID=0x00000007 Parent=0x00000004 SizeRef=269,715 Selected=0xF02CD328
 
