Added Phong Lighting Model

--- a/dream.ini
+++ b/dream.ini
@@ -1,29 +1,29 @@
 [Window][DockSpace Window]
 Pos=0,0
-Size=1210,720
+Size=1366,745
 Collapsed=0
 
 [Window][Viewport]
-Pos=231,27
-Size=738,514
+Pos=228,26
+Size=876,526
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][SceneGraph]
-Pos=4,27
-Size=225,689
+Pos=4,26
+Size=222,715
 Collapsed=0
 DockId=0x00000002,0
 
 [Window][Inspector]
-Pos=971,27
-Size=235,689
+Pos=1106,26
+Size=256,715
 Collapsed=0
 DockId=0x00000007,0
 
 [Window][Output]
-Pos=231,543
-Size=738,173
+Pos=228,554
+Size=876,187
 Collapsed=0
 DockId=0x00000006,0
 
@@ -33,7 +33,7 @@ Size=907,540
 Collapsed=0
 
 [Window][Debug##Default]
-Pos=75,68
+Pos=-53,476
 Size=560,579
 Collapsed=0
 
@@ -43,14 +43,14 @@ Size=432,285
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=10,285
-Size=550,416
+Pos=367,139
+Size=656,533
 Collapsed=0
 
 [Window][V]
-Pos=-40,162
+Pos=79,169
 Size=639,420
-Collapsed=0
+Collapsed=1
 
 [Window][Title bar Hovered/Active tests]
 Pos=60,60
@@ -67,12 +67,17 @@ Pos=151,90
 Size=907,540
 Collapsed=0
 
+[Window][Dear ImGui Style Editor]
+Pos=106,127
+Size=366,589
+Collapsed=0
+
 [Docking][Data]
-DockSpace       ID=0x484C392C Window=0x9DF47A72 Pos=4,27 Size=1202,689 Split=X Selected=0xF02CD328
-  DockNode      ID=0x00000002 Parent=0x484C392C SizeRef=225,715 Selected=0xC15A3217
-  DockNode      ID=0x00000004 Parent=0x484C392C SizeRef=975,715 Split=X
-    DockNode    ID=0x00000003 Parent=0x00000004 SizeRef=894,715 Split=Y
-      DockNode  ID=0x00000005 Parent=0x00000003 SizeRef=792,539 CentralNode=1 Selected=0x995B0CF8
-      DockNode  ID=0x00000006 Parent=0x00000003 SizeRef=792,173 Selected=0xCB7211A8
-    DockNode    ID=0x00000007 Parent=0x00000004 SizeRef=235,715 Selected=0xF02CD328
+DockSpace       ID=0x484C392C Window=0x9DF47A72 Pos=4,26 Size=1358,715 Split=X Selected=0xF02CD328
+  DockNode      ID=0x00000002 Parent=0x484C392C SizeRef=222,715 Selected=0xC15A3217
+  DockNode      ID=0x00000004 Parent=0x484C392C SizeRef=1134,715 Split=X
+    DockNode    ID=0x00000003 Parent=0x00000004 SizeRef=876,715 Split=Y
+      DockNode  ID=0x00000005 Parent=0x00000003 SizeRef=792,526 CentralNode=1 Selected=0x995B0CF8
+      DockNode  ID=0x00000006 Parent=0x00000003 SizeRef=792,187 Selected=0xCB7211A8
+    DockNode    ID=0x00000007 Parent=0x00000004 SizeRef=256,715 Selected=0xF02CD328
 
