--- a/dream.ini
+++ b/dream.ini
@@ -1,29 +1,29 @@
 [Window][DockSpace Window]
 Pos=0,0
-Size=1366,745
+Size=1210,720
 Collapsed=0
 
 [Window][Viewport]
-Pos=228,26
-Size=876,526
+Pos=201,26
+Size=747,519
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][SceneGraph]
 Pos=4,26
-Size=222,715
+Size=195,690
 Collapsed=0
 DockId=0x00000002,0
 
 [Window][Inspector]
-Pos=1106,26
-Size=256,715
+Pos=950,26
+Size=256,690
 Collapsed=0
 DockId=0x00000007,0
 
 [Window][Output]
-Pos=228,554
-Size=876,187
+Pos=201,547
+Size=747,169
 Collapsed=0
 DockId=0x00000006,0
 
@@ -72,12 +72,17 @@ Pos=106,127
 Size=366,589
 Collapsed=0
 
+[Window][Test]
+Pos=5,160
+Size=775,354
+Collapsed=0
+
 [Docking][Data]
-DockSpace       ID=0x484C392C Window=0x9DF47A72 Pos=4,26 Size=1358,715 Split=X Selected=0xF02CD328
-  DockNode      ID=0x00000002 Parent=0x484C392C SizeRef=222,715 Selected=0xC15A3217
-  DockNode      ID=0x00000004 Parent=0x484C392C SizeRef=1134,715 Split=X
-    DockNode    ID=0x00000003 Parent=0x00000004 SizeRef=876,715 Split=Y
-      DockNode  ID=0x00000005 Parent=0x00000003 SizeRef=792,526 CentralNode=1 Selected=0x995B0CF8
-      DockNode  ID=0x00000006 Parent=0x00000003 SizeRef=792,187 Selected=0xCB7211A8
+DockSpace       ID=0x484C392C Window=0x9DF47A72 Pos=4,26 Size=1202,690 Split=X Selected=0xF02CD328
+  DockNode      ID=0x00000002 Parent=0x484C392C SizeRef=195,715 Selected=0xC15A3217
+  DockNode      ID=0x00000004 Parent=0x484C392C SizeRef=1005,715 Split=X
+    DockNode    ID=0x00000003 Parent=0x00000004 SizeRef=747,715 Split=Y
+      DockNode  ID=0x00000005 Parent=0x00000003 SizeRef=792,544 CentralNode=1 Selected=0x995B0CF8
+      DockNode  ID=0x00000006 Parent=0x00000003 SizeRef=792,169 Selected=0xCB7211A8
     DockNode    ID=0x00000007 Parent=0x00000004 SizeRef=256,715 Selected=0xF02CD328
 
