--- a/dream.ini
+++ b/dream.ini
@@ -7,7 +7,7 @@ Collapsed=0
 Pos=235,28
 Size=674,480
 Collapsed=0
-DockId=0x00000005,0
+DockId=0x00000002,0
 
 [Window][SceneGraph]
 Pos=4,28
@@ -25,7 +25,7 @@ DockId=0x00000004,0
 Pos=235,547
 Size=850,194
 Collapsed=0
-DockId=0x00000006,0
+DockId=0x00000002,0
 
 [Window][Settings]
 Pos=4,28
@@ -34,7 +34,7 @@ Collapsed=0
 DockId=0x0000000B,0
 
 [Window][Debug##Default]
-Pos=358,121
+Pos=617,122
 Size=631,543
 Collapsed=0
 
@@ -79,20 +79,20 @@ Size=775,354
 Collapsed=0
 
 [Window][Scene Browser]
-Pos=248,510
-Size=634,206
+Pos=4,499
+Size=1202,217
 Collapsed=0
 DockId=0x00000006,0
 
 [Window][Material Inspector]
-Pos=1095,28
-Size=267,713
+Pos=939,28
+Size=267,688
 Collapsed=0
 DockId=0x00000008,0
 
 [Window][Material View]
 Pos=4,28
-Size=266,713
+Size=266,688
 Collapsed=0
 DockId=0x00000009,0
 
@@ -100,48 +100,61 @@ DockId=0x00000009,0
 Pos=239,28
 Size=1123,713
 Collapsed=0
-DockId=0x00000005,0
+DockId=0x00000002,0
 
 [Window][Scene Viewport]
-Pos=248,28
-Size=634,480
+Pos=257,28
+Size=645,469
 Collapsed=0
-DockId=0x00000005,0
+DockId=0x00000002,0
 
 [Window][Environment Viewport]
-Pos=239,28
-Size=1123,713
+Pos=272,28
+Size=1090,713
 Collapsed=0
-DockId=0x00000005,0
+DockId=0x00000002,0
 
 [Window][Scene Inspector]
-Pos=884,28
-Size=322,688
+Pos=904,28
+Size=302,469
 Collapsed=0
 DockId=0x0000000E,0
 
 [Window][NodeGraph]
 Pos=4,28
-Size=242,688
+Size=251,469
 Collapsed=0
 DockId=0x0000000F,0
 
+[Window][Add Nodes]
+Pos=151,90
+Size=907,540
+Collapsed=0
+
+[Window][Environment Settings]
+Pos=4,28
+Size=266,713
+Collapsed=0
+DockId=0x00000011,0
+
 [Docking][Data]
-DockSpace                 ID=0x484C392C Window=0x9DF47A72 Pos=4,28 Size=1202,688 Split=X Selected=0x995B0CF8
-  DockNode                ID=0x0000000F Parent=0x484C392C SizeRef=242,688 Selected=0xD0F455F6
-  DockNode                ID=0x00000010 Parent=0x484C392C SizeRef=958,688 Split=X
-    DockNode              ID=0x0000000D Parent=0x00000010 SizeRef=878,688 Split=X
-      DockNode            ID=0x0000000B Parent=0x0000000D SizeRef=233,688 Selected=0x1C33C293
-      DockNode            ID=0x0000000C Parent=0x0000000D SizeRef=1123,688 Split=X
-        DockNode          ID=0x00000009 Parent=0x0000000C SizeRef=266,713 Selected=0xC25B556E
-        DockNode          ID=0x0000000A Parent=0x0000000C SizeRef=1090,713 Split=X
-          DockNode        ID=0x00000003 Parent=0x0000000A SizeRef=933,688 Split=X
-            DockNode      ID=0x00000001 Parent=0x00000003 SizeRef=229,690 Selected=0xC15A3217
-            DockNode      ID=0x00000007 Parent=0x00000003 SizeRef=1127,690 Split=X
-              DockNode    ID=0x00000002 Parent=0x00000007 SizeRef=830,690 Split=Y
-                DockNode  ID=0x00000005 Parent=0x00000002 SizeRef=971,505 CentralNode=1 Selected=0xC2FD1931
-                DockNode  ID=0x00000006 Parent=0x00000002 SizeRef=971,206 Selected=0x6D15E219
-              DockNode    ID=0x00000004 Parent=0x00000007 SizeRef=295,690 Selected=0xF02CD328
-          DockNode        ID=0x00000008 Parent=0x0000000A SizeRef=267,688 Selected=0x92B6AFED
-    DockNode              ID=0x0000000E Parent=0x00000010 SizeRef=322,688 Selected=0x12CF0F29
+DockSpace                   ID=0x484C392C Window=0x9DF47A72 Pos=4,28 Size=1202,688 Split=Y Selected=0x995B0CF8
+  DockNode                  ID=0x00000005 Parent=0x484C392C SizeRef=1202,494 Split=X
+    DockNode                ID=0x00000011 Parent=0x00000005 SizeRef=266,688 Selected=0xCDE9F020
+    DockNode                ID=0x00000012 Parent=0x00000005 SizeRef=934,688 Split=X
+      DockNode              ID=0x0000000F Parent=0x00000012 SizeRef=251,688 Selected=0xD0F455F6
+      DockNode              ID=0x00000010 Parent=0x00000012 SizeRef=1105,688 Split=X
+        DockNode            ID=0x0000000D Parent=0x00000010 SizeRef=801,688 Split=X
+          DockNode          ID=0x0000000B Parent=0x0000000D SizeRef=233,688 Selected=0x1C33C293
+          DockNode          ID=0x0000000C Parent=0x0000000D SizeRef=1123,688 Split=X
+            DockNode        ID=0x00000009 Parent=0x0000000C SizeRef=266,713 Selected=0xC25B556E
+            DockNode        ID=0x0000000A Parent=0x0000000C SizeRef=1090,713 Split=X
+              DockNode      ID=0x00000003 Parent=0x0000000A SizeRef=933,688 Split=X
+                DockNode    ID=0x00000001 Parent=0x00000003 SizeRef=229,690 Selected=0xC15A3217
+                DockNode    ID=0x00000007 Parent=0x00000003 SizeRef=1127,690 Split=X
+                  DockNode  ID=0x00000002 Parent=0x00000007 SizeRef=830,690 CentralNode=1 Selected=0xC2FD1931
+                  DockNode  ID=0x00000004 Parent=0x00000007 SizeRef=295,690 Selected=0xF02CD328
+              DockNode      ID=0x00000008 Parent=0x0000000A SizeRef=267,688 Selected=0x92B6AFED
+        DockNode            ID=0x0000000E Parent=0x00000010 SizeRef=302,688 Selected=0x12CF0F29
+  DockNode                  ID=0x00000006 Parent=0x484C392C SizeRef=1202,217 Selected=0x6D15E219
 
